# OpenSkyImager

./: .gitignore  .kateproject  CMakeLists.txt  Makefile  OpenSkyImager.odt  README.md  REMOTE.md  TODO  VERSIONS.md  avilib.c  avilib.h  dsi2pro.c  dsi2pro.h  gtk3Imager  gtk3Imager.mak  gtkImager  gtkImager.mak  gtkTools.c  gtkTools.h  gtkversions.h  imgAvi.c  imgAvi.h  imgBase.h  imgCFWio.c  imgCFWio.h  imgCamio.c  imgCamio.h  imgFifoio.c  imgFitsio.c  imgFitsio.h  imgMain.c  imgPixbuf.c  imgPixbuf.h  imgWCallbacks.c  imgWCallbacks.h  imgWFuncs.c  imgWFuncs.h  imgWindow.c  imgWindow.h  install_OSI.bash  (+31 more)
cmdline/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt  atikccdusb.h  atikcore.h  avilib.c  avilib.h  cAtik.cpp  dsi2pro.c  glibversions.h  guider.h  imgAvi.c  imgAvi.h  imgBase.h  imgCFWio.c  imgCFWio.h  imgCamio.c  imgCamio.h  imgFitsio.c  imgFitsio.h  libusbio.c  libusbio.h  minicam5.c  minicam5.h  qhy10.c  qhy11.c  qhy11.h  qhy12.c  qhy2old.c  qhy5.c  qhy5.h  qhy5ii.c  qhy5ii.h  qhy6old.c  qhy6old.h  qhy7.c  qhy8l.c  qhy8l.h  qhy8old.c  qhy8old.h  qhy9.c  qhy9.h  (+16 more)
cpp/: CMakeLists.txt  osicamera.cpp  osicamera.h
files/: CMakeLists.txt  create_desktop.bash  install_OSI.bash  sbig_query_ethernet.ini
files/fr/LC_MESSAGES/: OpenSkyImager.mo
files/it/LC_MESSAGES/: OpenSkyImager.mo
files/po/: OpenSkyImager.pot  srclist.txt
files/po/fr/: OpenSkyImager.po
files/po/it/: OpenSkyImager.po
files/po/zh_CN/: OpenSkyImager.po
files/zh/LC_MESSAGES/: OpenSkyImager.mo
fr_FR/LC_MESSAGES/: OpenSkyImager.mo
gtk/: CMakeLists.txt  gtkTools.c  gtkTools.h  imgCFWio.c  imgCFWio.h  imgFifoio.h  imgMain.c  imgPixbuf.c  imgPixbuf.h  imgWCallbacks.c  imgWCallbacks.h  imgWFuncs.c  imgWFuncs.h  imgWindow.c  imgWindow.h
indi/: CMakeLists.txt  indi_ccd.cpp  indi_ccd.h  indi_osi_ccd.xml
it_IT/LC_MESSAGES/: OpenSkyImager.mo
libusb-custom/: CMakeLists.txt  Makefile  Makefile.in  config.h  config.status  configure  libtool  libusb-1.0.pc  make_libusb
libusb-custom/doc/: Makefile  doxygen.cfg
libusb-custom/examples/: Makefile
libusb-custom/libusb/: Makefile  libusb-1.0.la
libusb-custom/libusb/os/: linux_udev.c  linux_usbfs.c
libusb-custom/tests/: Makefile
po/: OpenSkyImager.pot  srclist.txt
po/fr/: OpenSkyImager.po
po/it/: OpenSkyImager.po
po/zh_CN/: OpenSkyImager.po
qhy/: 85-qhy.rules  85-qhy.rules.in  CMakeLists.txt  IC8300_20140903.hex  ic8300.hex.win  ic8300_20140927.hex  ic8300_20141003.hex  ic8300_original.hex  ic90a.hex  qhy11.hex  qhy2.hex  qhy5ii_1024140423_4p.hex  qhy5ii_v3_compat.hex  qhy5ii_v3_hiperf.hex  qhy6.hex  qhy6pro.hex  qhy7.hex  qhy8.hex  qhy9-cfw-fast.hex  qhy9-cfw-slow.hex  qhy9-cfw-std.hex
sbig/: CMakeLists.txt  install_sbig.bash  sbigudrv.h
urvc2/: CMakeLists.txt  READ.ME  ccd.c  io.c  micro.c  tools.c
zh_CN/LC_MESSAGES/: OpenSkyImager.mo
