file(GLOB gtk_SRCS *.c)
add_executable(gtkImager ${core_SRCS} ${gtk_SRCS})
target_link_libraries(gtkImager ${GTK3_LIBRARIES} ${GTK2_LIBRARIES} ${COMMON_LIBRARIES})
install(TARGETS gtkImager RUNTIME DESTINATION bin/${PROJECT_NAME})
execute_process(COMMAND ${PROJECT_SOURCE_DIR}/files/create_desktop.bash ${CMAKE_INSTALL_PREFIX}/bin/${PROJECT_NAME} ${CMAKE_CURRENT_BINARY_DIR}/OpenSkyImager.desktop)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/OpenSkyImager.desktop DESTINATION /usr/share/applications) 
